fix ios, add scroll to event on mobile to content section"

--- a/wp-content/themes/dff/src/scss/layout/_tabs.scss
+++ b/wp-content/themes/dff/src/scss/layout/_tabs.scss
@@ -46,6 +46,7 @@
             border: none;
             background: none;
             cursor: pointer;
+            color: $color-black;
         }
     }
 }
